--- a/src/mobile/pages/fields/field/views/number.less
+++ b/src/mobile/pages/fields/field/views/number.less
@@ -1,3 +1,10 @@
-img.calc-icon {
-    margin-left: .1em;
+div.number-field {
+    // account for 44px tall wcag button
+    margin-bottom: 52px;
+
+    button.expand-calc {
+        margin-top: 2px;
+        font-size: 24px;
+        padding: 0px 5px;
+    }
 }
